[package]
name = "thinline"
version = "0.1.0"
authors = ["Sebastian Spiess <spiess.sebastian@web.de>"]

repository = "https://github.com/Drogglbecher/thinline"
readme = "README.md"
license = "Apache-2.0"

description = "A parser and builder for function-unittests written in comment sections for C-language family."

[lib]
name = "thinlinelib"

[features]
runtime = ["clang-sys/runtime"]
static = ["clang-sys/static"]

clang_5_0 = ["clang-sys/clang_5_0", "gte_clang_5_0"]
clang_6_0 = ["clang-sys/clang_6_0", "gte_clang_5_0", "gte_clang_6_0"]

gte_clang_5_0 = []
gte_clang_6_0 = []

[dependencies]
clang = "0"
clang-sys = "0"
clap = { version = "2", features = ["yaml"] }
clippy = { version = "0", optional = true }
error-chain = "0"
glob = "0"
lazy_static = "0"
log = "0"
python-parser = "0"
regex = "0"
serde = "1"
serde_derive = "1"
slog-envlogger = "2"
snapshot = "0"
walkdir = "1"
yaml-rust = "0"
