[package]
name = "thinline"
version = "0.4.1"
authors = ["Sebastian Spiess <code@sebastian-spiess.de>"]

repository = "https://github.com/Drogglbecher/thinline"
readme = "README.md"
license = "Apache-2.0"

description = "A parser and builder for function-unittests written in comment sections for C-language family & python."

[lib]
name = "thinlinelib"

[features]
runtime = ["clang-sys/runtime"]
static = ["clang-sys/static"]

clang_5_0 = ["clang-sys/clang_5_0", "gte_clang_5_0"]
clang_6_0 = ["clang-sys/clang_6_0", "gte_clang_5_0", "gte_clang_6_0"]

gte_clang_5_0 = []
gte_clang_6_0 = []

[dependencies]
clang = "0.20.0"
clang-sys = "0.23.0"
clap = { version = "2.32.0", features = ["yaml"] }
clippy = { version = "0.0.302", optional = true }
directories = "1.0.2"
env_logger = "0.5.13"
failure = "0.1.3"
glob = "0.2.11"
lazy_static = "1.1.0"
log = "0.4.5"
python-parser = "0.1.0"
regex = "1.0.5"
run_script = "0.1.20"
serde = "1.0.80"
serde_derive = "1.0.80"
slog-envlogger = "2.1.0"
snapshot = "0.1.0"
walkdir = "2.2.5"
yaml-rust = "0.4.2"
